infrastructure/configs/istio/security/authorizationpolicies.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: global-deny-all
  namespace: istio-system
spec: {}
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: istio-ingressgateway
  namespace: istio-system
spec:
  action: ALLOW
  selector:
    matchLabels:
      istio: ingressgateway
  rules:
    - {}
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: istio-ingressgateway-oauth2-proxy
  namespace: istio-system
spec:
  action: CUSTOM
  provider:
    name: oauth2-proxy
  selector:
    matchLabels:
      istio: ingressgateway
  rules:
    - to:
        - operation:
            notPaths:
              - /dex/*
              - /dex/**
              - /oauth2/*
            notHosts:
              - argocd.luzero.online
              - grafana.luzero.online
              - argo.luzero.online
              - ferro-metrics-api.luzero.online
              - n8n-csr-interns.slicearrow.com
      when:
        - key: request.headers[authorization]
          notValues:
            - '*'
